dons_tests/valid_kxi/comp_type_check.kxi
void main(){
    int x = 1;
    char y = 'c';
    string z = "string";
    bool b = true;
    x >= 1;
    y <= 'a';
    z == "string";
    b != false;
}
