dons_tests/invalid_kxi/bad_assign_type_check.kxi
void main(){
    int x;
    char y;
    string z;
    bool b;
    b = 1;
    x = 'c';
    y = "string";
    z = true;
}
